[package]
name = "philharmonic-types"
version = "0.1.1"
edition = "2024"

description = "Cornerstone types for the Philharmonic workflow orchestration system: content-addressed JSON, phantom-typed UUID identities, SHA-256 hashes, and millis-since-epoch timestamps."
license = "Apache-2.0 OR MPL-2.0"
repository = "https://github.com/metastable-void/philharmonic-types"
readme = "README.md"
rust-version = "1.85"

keywords = ["uuid", "content-addressed", "workflow", "philharmonic"]
categories = ["data-structures", "encoding"]

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.2"
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
