[package]
name = "philharmonic-types"
version = "0.3.7"
edition = "2024"

description = "Cornerstone types for the Philharmonic workflow orchestration system: content-addressed JSON, phantom-typed UUID identities, SHA-256 hashes, and millis-since-epoch timestamps."
license = "Apache-2.0 OR MPL-2.0"
repository = "https://github.com/metastable-void/philharmonic-types"
readme = "README.md"
rust-version = "1.88"

keywords = ["uuid", "content-addressed", "workflow", "philharmonic"]
categories = ["data-structures", "encoding"]

[dependencies]
hex = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_jcs = { version = "0.2", default-features = false, features = [] }
serde_json = { version = "1", default-features = false, features = ["std"] }
sha2 = { version = "0.11", default-features = false, features = [] }
thiserror = { version = "2", default-features = false, features = ["std"] }
uuid = { version = "1.23", default-features = false, features = ["serde", "std", "v4", "v7"] }

[dev-dependencies]
# Round-trip test coverage for Sha256's human-readable-aware serde.
ciborium = { version = "0.2", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
